# QwenASR

./: Cargo.toml
crates/qwen-asr/: Cargo.toml
crates/qwen-asr-cli/: Cargo.toml
crates/qwen-asr-quantize/: Cargo.toml
crates/qwen-asr-quantize/src/: main.rs
crates/qwen-asr/src/: align.rs  c_api.rs  context.rs  decoder.rs  decoder_gpu.rs  device.rs  encoder.rs  encoder_gpu.rs  gpu_tensors.rs  lib.rs  metal_ops.rs  quantize.rs  transcribe.rs
crates/qwen-asr/src/kernels/: generic.rs  mod.rs  neon.rs
docs/: benchmark-report-all.md  benchmark-report-rust.md  fix-audio-trim-enc-cache-bug.md  fix-speech-ended-plan.md  metal-optimization-log.md  mlx-vs-rust-streaming-comparison.md  streaming-truncation-investigation.md
scripts/: benchmark.py  benchmark_all.py  debug_stream.py
