[package]
name = "qwen-asr-quantize"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Offline quantization tool: BF16 safetensors → INT8 .qint8"

[[bin]]
name = "qwen-asr-quantize"
path = "src/main.rs"

[dependencies]
qwen-asr = { version = "0.3.0", path = "../qwen-asr" }
